# wutrader

./: .gitignore  CHANGELOG.txt  Doxyfile  Makefile  README.md  mkdocs.yml  tutorial.md
docs/: 404.html  index.html  search.html  sitemap.xml
docs/cheatsheets/: index.html
docs/data-formats/: index.html
docs/faq/: index.html
docs/features/: index.html
docs/html/: annotated.html  annotated_dup.js  basic_8c.html  basic_8c.js  basic_8c_source.html  calmar_8c.html  calmar_8c.js  calmar_8c_source.html  classes.html  crossover_8c.html  crossover_8c.js  crossover_8c_source.html  csv_8c.html  csv_8c.js  csv_8c_source.html  data_8h.html  data_8h.js  data_8h_source.html  dir_3de45fbf08d2e79aacff2f4de113ab26.html  dir_3de45fbf08d2e79aacff2f4de113ab26.js  dir_574b6b5693d08f2a1798aba2e542ead9.html  dir_574b6b5693d08f2a1798aba2e542ead9.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_8fd237e36e8f13dba1fb1a368769f4e8.html  dir_8fd237e36e8f13dba1fb1a368769f4e8.js  dir_943d352f320bafa409128772d570ff03.html  dir_943d352f320bafa409128772d570ff03.js  dir_a91d1b1cb7f406cd99da0e5164bf7246.html  dir_a91d1b1cb7f406cd99da0e5164bf7246.js  doxygen_crawl.html  (+259 more)
docs_src/: cheatsheets.md  data-formats.md  faq.md  features.md  index.md  installation.md  portfolio-configuration.md  timestamps.md  tutorial.md
examples/: Makefile
include/: wu.h
python/: .gitignore  .swig-files-readme  INSTALL.md  MANIFEST.in  Makefile  README.md  example.py  example_backtest.py  pyproject.toml  setup.py  wu.i  wu.py  wu_wrap.c
tests/: Makefile  main.c
(+181 files in other folders)
