[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wu"
version = "0.1.0"
description = "Python bindings for WU backtesting library"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "jailop"}
]
keywords = ["backtesting", "trading", "finance", "algorithmic-trading"]

[project.urls]
Homepage = "https://codeberg.org/jailop/wu"
Repository = "https://codeberg.org/jailop/wu"
Issues = "https://codeberg.org/jailop/wu/issues"

[tool.setuptools]
py-modules = ["wu"]

